generate grid using js

--- a/01-PixelArtGenerator/index.html
+++ b/01-PixelArtGenerator/index.html
@@ -20,10 +20,11 @@
             min="3"
             max="50"
             step="1"
+            value="25"
             name="gridWidth"
             id="gridWidth"
           />
-          <span id="gridWidth-label">35</span>
+          <span id="gridWidth-label">25</span>
         </div>
         <div>
           <label for="gridHeight">Grid Height</label>
@@ -32,20 +33,21 @@
             min="3"
             max="50"
             step="1"
+            value="25"
             name="gridHeight"
             id="gridHeight"
           />
-          <span id="gridHeight-label">35</span>
+          <span id="gridHeight-label">25</span>
         </div>
       </div>
       <div class="grid-options">
-        <button id="optn-create">Create Grid</button>
-        <button id="optn-clear">Clear Grid</button>
-        <input type="color" id="optn-picker" name="picker" value="#e66465" />
-        <button id="optn-erase">Erase</button>
-        <button id="optn-paint">Paint</button>
+        <button id="btn-create">Create Grid</button>
+        <button id="btn-clear">Clear Grid</button>
+        <input type="color" id="picker" name="picker" value="#e66465" />
+        <button id="btn-erase">Erase</button>
+        <button id="btn-paint">Paint</button>
       </div>
-      <div class="gridPaint"></div>
+      <div class="gridCanvas"></div>
     </div>
   </body>
 </html>
