--- a/01-PixelArtGenerator/index.html
+++ b/01-PixelArtGenerator/index.html
@@ -43,7 +43,9 @@
       <div class="grid-options">
         <button id="btn-create">Create Grid</button>
         <button id="btn-clear">Clear Grid</button>
-        <input type="color" id="picker" name="picker" value="#e66465" />
+        <div>
+          <input type="color" id="picker" name="picker" value="#e66465" />
+        </div>
         <button id="btn-erase">Erase</button>
         <button id="btn-paint">Paint</button>
       </div>
