--- a/02-RichTextEditor/index.html
+++ b/02-RichTextEditor/index.html
@@ -34,7 +34,7 @@
             />
           </svg>
         </button>
-        <button>
+        <button class="btn-ordered-list">
           <!-- list-ol -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
@@ -42,7 +42,7 @@
             />
           </svg>
         </button>
-        <button>
+        <button class="btn-unordered-list">
           <!-- list-ul -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
