Rich Text Editor add more event listeners

--- a/02-RichTextEditor/index.html
+++ b/02-RichTextEditor/index.html
@@ -66,7 +66,7 @@
             />
           </svg>
         </button>
-        <button>
+        <button class="btn-link">
           <!-- link -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
             <path
@@ -82,7 +82,7 @@
             />
           </svg>
         </button>
-        <button>
+        <button class="btn-align-left">
           <!-- align-left -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path
@@ -90,7 +90,7 @@
             />
           </svg>
         </button>
-        <button>
+        <button class="btn-align-center">
           <!-- align-center -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path
@@ -98,7 +98,7 @@
             />
           </svg>
         </button>
-        <button>
+        <button class="btn-align-right">
           <!-- align-right -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path
@@ -106,7 +106,7 @@
             />
           </svg>
         </button>
-        <button>
+        <button class="btn-align-justify">
           <!-- align-justify -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path
@@ -139,23 +139,21 @@
           <option value="h6">H6</option>
         </select>
         <select name="fonts" id="fonts">
-          <option value="arial">Arial</option>
-          <option value="verdana">Verdana</option>
-          <option value="timesNewRoman">Times New Roman</option>
-          <option value="garamond">Garamond</option>
-          <option value="georgia">Georgia</option>
-          <option value="courierNew">Courier New</option>
-          <option value="cursive">Cursive</option>
+          <option value="Times New Roman">Times New Roman</option>
+          <option value="Garamond">Garamond</option>
+          <option value="Georgia">Georgia</option>
+          <option value="Courier New">Courier New</option>
+          <option value="Cursive">Cursive</option>
         </select>
         <select name="fontSize" id="fontSize">
-          <option value="8">8</option>
-          <option value="10">10</option>
-          <option value="12">12</option>
-          <option value="16">16</option>
-          <option value="24">24</option>
-          <option value="36">36</option>
-          <option value="48">48</option>
-          <option value="72">72</option>
+          <option value="8px">8</option>
+          <option value="10px">10</option>
+          <option value="12px">12</option>
+          <option value="16px">16</option>
+          <option value="24px">24</option>
+          <option value="36px">36</option>
+          <option value="48px">48</option>
+          <option value="72px">72</option>
         </select>
         <div>
           <input type="color" id="fontColor" name="fontColor" value="#000000" />
