--- a/03-PasswordGenerator/index.html
+++ b/03-PasswordGenerator/index.html
@@ -14,17 +14,19 @@
         <input type="text" />
         <button>copy</button>
       </div>
-      <div class="Password-strength"></div>
-      <div class="Password-length">
+      <div class="password-strength"></div>
+      <div class="password-length">
         <input
           type="range"
           min="3"
           max="30"
           name="passLength"
           id="passLength"
+          value="12"
         />
+        <label for="passLength">12</label>
       </div>
-      <div class="Password-options">
+      <div class="password-options">
         <input type="checkbox" name="lowercase" id="lowercase" />
         <label for="lowercase">Lowercase</label>
         <input type="checkbox" name="uppercase" id="uppercase" />
