--- a/03-PasswordGenerator/index.html
+++ b/03-PasswordGenerator/index.html
@@ -14,7 +14,10 @@
         <input type="text" />
         <button>copy</button>
       </div>
-      <div class="password-strength"></div>
+      <div class="password-strength">
+        <div class="strength-bar"></div>
+        <div></div>
+      </div>
       <div class="password-length">
         <input
           type="range"
@@ -36,10 +39,10 @@
 
         <input type="checkbox" name="symbols" id="symbols" />
         <label for="symbols">Symbols</label>
-        <input type="checkbox" name="duplicates" id="duplicates" />
-        <label for="duplicates">Exclude duplicates</label>
         <input type="checkbox" name="whiteSpaces" id="whiteSpaces" />
         <label for="whiteSpaces">Include spaces</label>
+        <input type="checkbox" name="duplicates" id="duplicates" />
+        <label for="duplicates">Exclude duplicates</label>
       </div>
       <button class="generate-password-btn">Generate Password</button>
     </div>
