Pass Generator add general functionality

--- a/03-PasswordGenerator/index.html
+++ b/03-PasswordGenerator/index.html
@@ -12,7 +12,7 @@
       <h1>Password Generator</h1>
       <div class="generated-password">
         <input type="text" />
-        <button>copy</button>
+        <button class="copy-password">copy</button>
       </div>
       <div class="password-strength">
         <div class="strength-bar"></div>
