QRCode Generator basic functionality

--- a/04-QRCodeGenerator/index.html
+++ b/04-QRCodeGenerator/index.html
@@ -16,13 +16,13 @@
   </head>
   <body>
     <div class="main-container">
-      <input type="url" name="qrcodeUrl" id="qrcodeUrl" />
+      <input type="text" name="qrcodeUrl" id="qrcodeUrl" />
       <div class="qrcode"></div>
       <div class="options">
-        <input type="color" name="innerColor" id="innerColor" />
-        <input type="color" name="outerColor" id="outerColor" />
+        <input type="color" name="lightColor" id="lightColor" value="#ffffff" />
+        <input type="color" name="darkColor" id="darkColor" value="#000000" />
         <select name="selectSize" id="selectSize"></select>
-        <button class="downloadBtn">Download</button>
+        <a href="" download class="downloadBtn">Download</a>
       </div>
     </div>
   </body>
