BatteryApp add styling

--- a/05-BatteryLevel/index.html
+++ b/05-BatteryLevel/index.html
@@ -9,12 +9,23 @@
   </head>
   <body>
     <div class="main-container">
-      <h1>Battery Level</h1>
-      <div class="batteryPill-container"></div>
-      <div class="batteryInfo">
-        <h3>Battery:</h3>
-        <h2>85%</h2>
-        <h4>Charging...</h4>
+      <h1 class="title">Battery Level</h1>
+      <div class="info-container">
+        <div class="batteryPill-container">
+          <div class="charge-level"></div>
+        </div>
+        <div class="battery-info">
+          <h3>Battery:</h3>
+          <h2>65%</h2>
+          <div class="svg-wrapper">
+            <h4>Charging...</h4>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <path
+                d="M349.4 44.6c5.9-13.7 1.5-29.7-10.6-38.5s-28.6-8-39.9 1.8l-256 224c-10 8.8-13.6 22.9-8.9 35.3S50.7 288 64 288H175.5L98.6 467.4c-5.9 13.7-1.5 29.7 10.6 38.5s28.6 8 39.9-1.8l256-224c10-8.8 13.6-22.9 8.9-35.3s-16.6-20.7-30-20.7H272.5L349.4 44.6z"
+              />
+            </svg>
+          </div>
+        </div>
       </div>
     </div>
   </body>
