TicTacToe styles and logic

--- a/06-TicTacToe/index.html
+++ b/06-TicTacToe/index.html
@@ -20,5 +20,13 @@
       <div class="tile"></div>
       <div class="tile"></div>
     </div>
+    <button class="btnRestart btn">New Game</button>
+    <div class="modal">
+      <div class="winMessage">
+        <h3>Game over</h3>
+        <h2>O Wins!</h2>
+        <button class="btn">Play Again</button>
+      </div>
+    </div>
   </body>
 </html>
