--- a/08-MultiStepForm/index.html
+++ b/08-MultiStepForm/index.html
@@ -12,29 +12,32 @@
       <form class="wrapper-form" action="">
         <div class="screen" >
           <h2>Create Account</h2>
-          <input type="email" name="email" id="email">
-          <input type="password" name="password" id="password">
-          <input type="password" name="confirmPassword" id="confirmPassword">
-          <div>
+          <input type="email" placeholder="Email" name="email" id="email">
+          <input type="password" placeholder="Password" name="password" id="password">
+          <input type="password" placeholder="Confirm Password" name="confirmPassword" id="confirmPassword">
+          <div class="btn-wrapper">
             <button class="btn btn-next" type="button">Next</button>
           </div>
         </div>
         <div class="screen">
           <h2>Personal Info</h2>
-          <input type="text" name="firstName" id="firstName">
-          <input type="text" name="lastName" id="lastName">
-          <input type="date" name="birthDate" id="birthDate">
-          <div>
+          <input type="text" placeholder="First name" name="firstName" id="firstName">
+          <input type="text" placeholder="Last name" name="lastName" id="lastName">
+          <div class="birthDate-wrapper">
+            <label for="birthDate">Birth date: </label>
+            <input type="date" name="birthDate" id="birthDate">
+          </div>
+          <div class="btn-wrapper">
             <button class="btn btn-back" type="button">Back</button>
             <button class="btn btn-next" type="button">Next</button>
           </div>
         </div>
         <div class="screen">
           <h2>Additional Info</h2>
-          <input type="number" name="numPets" id="numPets">
-          <input type="text" name="mainPetName" id="mainPetName">
-          <input type="text" name="favColor" id="favColor">
-          <div>
+          <input type="number" placeholder="Number of Pets" name="numPets" id="numPets">
+          <input type="text" placeholder="Favorite Pet" name="mainPetName" id="mainPetName">
+          <input type="text" placeholder="Favorite Color" name="favColor" id="favColor">
+          <div class="btn-wrapper">
             <button class="btn btn-back" type="button">Back</button>
             <button class="btn btn-submit" type="submit">Submit</button>
           </div>
