--- a/09-AspectRatioCalculator/index.html
+++ b/09-AspectRatioCalculator/index.html
@@ -14,18 +14,26 @@
       <div class="ratio-wrapper">
         <h3>Ratio</h3>
         <div>
-          <input type="number">
-          <input type="number">
+          <input type="number" value="16">
+          <input type="number" value="9">
         </div>
       </div>
       <div class="size-wrapper">
-        <div>
+        <div class="size-div">
           <h3 for="width">Width</h3>
-          <input type="number">
+          <input type="number" value="1920" min="1">
+          <div class="checkbox-div">
+            <label for="lockWidth">Lock</label>
+            <input type="radio" name="lock" id="lockWidth" checked>
+          </div>
         </div>
-        <div>
+        <div class="size-div">
           <h3 for="height">Height</h3>
-          <input type="number">
+          <input type="number" value="1080" min="1">
+          <div class="checkbox-div">
+            <label for="lockHeight">Lock</label>
+            <input type="radio" name="lock" id="lockHeight">
+          </div>
         </div>
       </div>
     </div>
