--- a/10-WeatherApp/index.html
+++ b/10-WeatherApp/index.html
@@ -3,11 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App</h1>
+    <div class="main-container">
+      <div class="search-wrapper">
+        <i class="fa-solid fa-location-dot"></i>
+        <input type="text" />
+        <button class="search-btn">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </div>
+      <div class="img-wrapper">
+        <img src="./images/cloud.png" />
+      </div>
+      <div class="temperature-wrapper">
+        <h2>0</h2>
+        <sup>°C</sup>
+      </div>
+      <div class="temperature-info">
+        <h2>No Data</h2>
+      </div>
+      <div class="moreInfo-wrapper">
+        <div class="moreInfo">
+          <div>
+            <i class="fa-solid fa-water"></i>
+            <div>
+              <h3>0%</h3>
+              <h4>Humidity</h4>
+            </div>
+          </div>
+          <div>
+            <i class="fa-solid fa-wind"></i>
+            <div>
+              <h3>0Km/h</h3>
+              <h4>Wind Speed</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
