WeatherApp refined styles and js

--- a/10-WeatherApp/index.html
+++ b/10-WeatherApp/index.html
@@ -23,30 +23,32 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </div>
-      <div class="img-wrapper">
-        <img src="./images/cloud.png" />
-      </div>
-      <div class="temperature-wrapper">
-        <h2>0</h2>
-        <sup>°C</sup>
-      </div>
-      <div class="temperature-info">
-        <h2>No Data</h2>
-      </div>
-      <div class="moreInfo-wrapper">
-        <div class="moreInfo">
-          <div>
-            <i class="fa-solid fa-water"></i>
+      <div class="body-wrapper">
+        <div class="img-wrapper">
+          <img src="./images/cloud.png" />
+        </div>
+        <div class="temperature-wrapper">
+          <h2>0</h2>
+          <sup>°C</sup>
+        </div>
+        <div class="temperature-info">
+          <h2>No Data</h2>
+        </div>
+        <div class="moreInfo-wrapper">
+          <div class="moreInfo">
             <div>
-              <h3>0%</h3>
-              <h4>Humidity</h4>
+              <i class="fa-solid fa-water"></i>
+              <div>
+                <h3>0%</h3>
+                <h4>Humidity</h4>
+              </div>
             </div>
-          </div>
-          <div>
-            <i class="fa-solid fa-wind"></i>
             <div>
-              <h3>0Km/h</h3>
-              <h4>Wind Speed</h4>
+              <i class="fa-solid fa-wind"></i>
+              <div>
+                <h3>0Km/h</h3>
+                <h4>Wind Speed</h4>
+              </div>
             </div>
           </div>
         </div>
