--- a/10-WeatherApp/index.html
+++ b/10-WeatherApp/index.html
@@ -11,6 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="env.js" defer></script>
     <script src="index.js" defer></script>
     <title>Weather App</title>
   </head>
