MovieGuide final style and js

--- a/11-MovieGuide/index.html
+++ b/11-MovieGuide/index.html
@@ -10,41 +10,36 @@
   </head>
   <body>
     <div class="main-container flex">
-      <div class="search-container flex">
+      <div class="search-container">
         <input type="text" />
         <button>search</button>
       </div>
       <div class="movie-container">
-        <div class="movie-data flex">
-          <div class="img-wrapper">
-            <img
-              src="https://m.media-amazon.com/images/M/MV5BNzQzOTk3OTAtNDQ0Zi00ZTVkLWI0MTEtMDllZjNkYzNjNTc4L2ltYWdlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_SX300.jpg"
-              alt="movie poster"
-            />
-          </div>
+        <div class="movie-data">
+          <img src="" alt="movie poster" />
+
           <div class="data-wrapper flex">
-            <h1>Movie Title</h1>
+            <h1></h1>
             <div class="rating flex">
               <h2>⭐</h2>
-              <h2>9.0</h2>
+              <h2></h2>
             </div>
             <div class="info flex">
-              <h3 class="text-light">R</h3>
-              <h3 class="text-light">2020</h3>
-              <h3 class="text-light">120 min</h3>
+              <h3 class="text-light"></h3>
+              <h3 class="text-light"></h3>
+              <h3 class="text-light"></h3>
             </div>
-            <div class="genres">
-              <!-- add genre cards here -->
-            </div>
+            <div class="genres flex"></div>
           </div>
         </div>
         <div class="movie-info">
           <h2>Plot:</h2>
-          <p class="text-light">plot information about the movie goes here</p>
+          <p class="text-light"></p>
           <h2>Cast:</h2>
-          <p class="text-light">cast of actors and actresses goes here</p>
+          <p class="text-light"></p>
         </div>
       </div>
+      <div class="notFound"><h2>Movie not found..</h2></div>
     </div>
   </body>
 </html>
