TypingApp styles and quotes

--- a/12-TypingApp/index.html
+++ b/12-TypingApp/index.html
@@ -9,20 +9,24 @@
   </head>
   <body>
     <div class="main-container">
-      <div>
-        <h3>Time: <span>10s</span></h3>
-        <h3>Mistakes: <span>2</span></h3>
+      <div class="typing-info-1">
+        <h3>Time: <span>0s</span></h3>
+        <h3>Mistakes: <span>0</span></h3>
       </div>
-      <div class="typingTest"></div>
-      <div class="typingInput" contenteditable="true"></div>
-      <div>
+      <div class="typingTest textBoxes">
+        It is very important to generate a good attitude, a good heart, as much
+        as possible. From this, happiness in both the short term and the long
+        term for both yourself and others will come.
+      </div>
+      <div class="typingInput textBoxes" contenteditable="true"></div>
+      <div class="btn-wrapper">
         <button class="startBtn">Start Test</button>
       </div>
       <div class="result-wrapper">
         <h2>Result</h2>
-        <div>
-          <h4>Accuracy: <span>100%</span></h4>
-          <h4>Speed: <span>40.00wpm</span></h4>
+        <div class="typing-info-2">
+          <h3>Accuracy: <span>100%</span></h3>
+          <h3>Speed: <span>0.00 wpm</span></h3>
         </div>
       </div>
     </div>
