TypingApp styles and js

--- a/12-TypingApp/index.html
+++ b/12-TypingApp/index.html
@@ -18,7 +18,11 @@
         as possible. From this, happiness in both the short term and the long
         term for both yourself and others will come.
       </div>
-      <div class="typingInput textBoxes" contenteditable="true"></div>
+      <textarea
+        class="typingInput textBoxes"
+        rows="4"
+        placeholder="Press Start Test, the counter will start when you begin typing"
+      ></textarea>
       <div class="btn-wrapper">
         <button class="startBtn">Start Test</button>
       </div>
