TypingApp styles and js

--- a/12-TypingApp/index.html
+++ b/12-TypingApp/index.html
@@ -9,26 +9,25 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="typing-info-1">
+      <div class="typing-info-1 typing-info">
         <h3>Time: <span>0s</span></h3>
         <h3>Mistakes: <span>0</span></h3>
       </div>
       <div class="typingTest textBoxes">
-        It is very important to generate a good attitude, a good heart, as much
-        as possible. From this, happiness in both the short term and the long
-        term for both yourself and others will come.
+        The text to be typed is shown here.
       </div>
       <textarea
         class="typingInput textBoxes"
         rows="4"
-        placeholder="Press Start Test, the counter will start when you begin typing"
+        placeholder="Press Start Test and click here to begin"
       ></textarea>
       <div class="btn-wrapper">
-        <button class="startBtn">Start Test</button>
+        <button class="startBtn btn">Start Test</button>
+        <button class="stopBtn btn">Stop Test</button>
       </div>
       <div class="result-wrapper">
         <h2>Result</h2>
-        <div class="typing-info-2">
+        <div class="typing-info-2 typing-info">
           <h3>Accuracy: <span>100%</span></h3>
           <h3>Speed: <span>0.00 wpm</span></h3>
         </div>
