--- a/12-TypingApp/index.html
+++ b/12-TypingApp/index.html
@@ -28,8 +28,14 @@
       <div class="result-wrapper">
         <h2>Result</h2>
         <div class="typing-info-2 typing-info">
-          <h3>Accuracy: <span>100%</span></h3>
-          <h3>Speed: <span>0.00 wpm</span></h3>
+          <div>
+            <h3>Accuracy:</h3>
+            <span>100%</span>
+          </div>
+          <div>
+            <h3>Speed:</h3>
+            <span>0.00 wpm</span>
+          </div>
         </div>
       </div>
     </div>
