--- a/13-TranslatorApp/index.html
+++ b/13-TranslatorApp/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="countries.js" defer></script>
     <script src="index.js" defer></script>
     <title>Translator App</title>
   </head>
   <body>
-    <div class="container">
-      <textarea id="inputText" placeholder="Enter text to translate"></textarea>
-      <select id="languageSelect">
-        <option value="en">English</option>
-        <option value="es">Spanish</option>
-        <option value="fr">French</option>
-      </select>
-      <button onclick="translateText()">Translate</button>
-      <div id="outputText"></div>
+    <div class="main-container">
+      <div>
+        <textarea
+          id="inputText"
+          placeholder="Enter text to translate"
+          class="textArea"
+        ></textarea>
+        <div id="outputText" class="textArea"></div>
+      </div>
+      <div>
+        <select id="inputLanguageSelect"></select>
+        <select id="outputLanguageSelect"></select>
+      </div>
+      <button id="translateBtn">Translate</button>
     </div>
   </body>
 </html>
