--- a/13-TranslatorApp/index.html
+++ b/13-TranslatorApp/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="countries.js" defer></script>
     <script src="index.js" defer></script>
@@ -10,7 +17,7 @@
   </head>
   <body>
     <div class="main-container">
-      <div>
+      <div class="text-wrapper">
         <textarea
           id="inputText"
           placeholder="Enter text to translate"
@@ -18,9 +25,24 @@
         ></textarea>
         <div id="outputText" class="textArea"></div>
       </div>
-      <div>
-        <select id="inputLanguageSelect"></select>
-        <select id="outputLanguageSelect"></select>
+      <div class="options-wrapper">
+        <div>
+          <i class="fa-solid fa-play"></i>
+          <div class="bar"></div>
+          <i class="fa-solid fa-copy"></i>
+          <div class="bar"></div>
+          <select id="inputLanguageSelect"></select>
+        </div>
+        <div>
+          <i class="fa-solid fa-repeat"></i>
+        </div>
+        <div>
+          <select id="outputLanguageSelect"></select>
+          <div class="bar"></div>
+          <i class="fa-solid fa-copy"></i>
+          <div class="bar"></div>
+          <i class="fa-solid fa-play"></i>
+        </div>
       </div>
       <button id="translateBtn">Translate</button>
     </div>
