TranslatorApp add voice to speech

--- a/13-TranslatorApp/index.html
+++ b/13-TranslatorApp/index.html
@@ -16,6 +16,7 @@
     <title>Translator App</title>
   </head>
   <body>
+    <div class="toast">Text copied</div>
     <div class="main-container">
       <div class="text-wrapper">
         <textarea
@@ -33,7 +34,7 @@
           <div class="bar"></div>
           <select id="inputLanguageSelect"></select>
         </div>
-        <div>
+        <div class="invert-language">
           <i class="fa-solid fa-repeat"></i>
         </div>
         <div>
