--- a/14-CryptoApp/index.html
+++ b/14-CryptoApp/index.html
@@ -8,29 +8,6 @@
     <title>Crypto App</title>
   </head>
   <body>
-    <div class="main-container">
-      <div class="card">
-        <img src="./images/bitcoin.png" alt="crypto" />
-        <div>
-          <h2>BITCOIN</h2>
-          <span>/USD</span>
-        </div>
-        <div>
-          <h2>0.3489057</h2>
-          <h3>0.934857</h3>
-        </div>
-      </div>
-      <div class="card card-red">
-        <img src="./images/bitcoin.png" alt="crypto" />
-        <div>
-          <h2>BITCOIN</h2>
-          <span>/USD</span>
-        </div>
-        <div>
-          <h2>0.3489057</h2>
-          <h3>0.934857</h3>
-        </div>
-      </div>
-    </div>
+    <div class="main-container"></div>
   </body>
 </html>
