TodoList changes to html css and js

--- a/15-TodoListApp/index.html
+++ b/15-TodoListApp/index.html
@@ -7,5 +7,34 @@
     <script src="index.js" defer></script>
     <title>Todo List</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <input type="text" />
+      <nav>
+        <div>
+          <button>All</button>
+          <button>Pending</button>
+          <button>Completed</button>
+        </div>
+        <button>Clear All</button>
+      </nav>
+      <div id="todos">
+        <ul id="todoAll">
+          <li><input type="checkbox" name="" id="" />Test1</li>
+          <li><input type="checkbox" name="" id="" />Test2</li>
+          <li><input type="checkbox" name="" id="" />Test3</li>
+        </ul>
+        <ul id="todoPending">
+          <li><input type="checkbox" name="" id="" />Test4</li>
+          <li><input type="checkbox" name="" id="" />Test5</li>
+          <li><input type="checkbox" name="" id="" />Test6</li>
+        </ul>
+        <ul id="todoCompleted">
+          <li><input type="checkbox" name="" id="" />Test7</li>
+          <li><input type="checkbox" name="" id="" />Test8</li>
+          <li><input type="checkbox" name="" id="" />Test9</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
