--- a/15-TodoListApp/index.html
+++ b/15-TodoListApp/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
     <title>Todo List</title>
   </head>
   <body>
     <div class="main-container">
-      <input type="text" />
+      <input type="text" class="todo-input" />
       <nav>
         <div>
           <button>All</button>
@@ -18,21 +25,21 @@
         </div>
         <button>Clear All</button>
       </nav>
-      <div id="todos">
-        <ul id="todoAll">
-          <li><input type="checkbox" name="" id="" />Test1</li>
-          <li><input type="checkbox" name="" id="" />Test2</li>
-          <li><input type="checkbox" name="" id="" />Test3</li>
-        </ul>
-        <ul id="todoPending">
-          <li><input type="checkbox" name="" id="" />Test4</li>
-          <li><input type="checkbox" name="" id="" />Test5</li>
-          <li><input type="checkbox" name="" id="" />Test6</li>
-        </ul>
-        <ul id="todoCompleted">
-          <li><input type="checkbox" name="" id="" />Test7</li>
-          <li><input type="checkbox" name="" id="" />Test8</li>
-          <li><input type="checkbox" name="" id="" />Test9</li>
+      <div class="todos-container">
+        <ul class="todos">
+          <li class="todo">
+            <label for="id">
+              <input type="checkbox" id="id" />
+              <p>Test Todo</p>
+            </label>
+            <div>
+              <i class="fa-solid fa-ellipsis"></i>
+              <ul>
+                <li><i class="fa-solid fa-pen-to-square"></i>Edit</li>
+                <li><i class="fa-solid fa-trash"></i>Delete</li>
+              </ul>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
