TodoList changes to style and input

--- a/15-TodoListApp/index.html
+++ b/15-TodoListApp/index.html
@@ -16,7 +16,10 @@
   </head>
   <body>
     <div class="main-container">
-      <input type="text" class="todo-input" />
+      <div class="todo-input-wrapper">
+        <i class="fa-solid fa-align-left"></i>
+        <input type="text" class="todo-input" />
+      </div>
       <nav>
         <div>
           <button>All</button>
