TodoList edit todo functionality

--- a/15-TodoListApp/index.html
+++ b/15-TodoListApp/index.html
@@ -29,22 +29,7 @@
         <button>Clear All</button>
       </nav>
       <div class="todos-container">
-        <ul class="todos">
-          <!-- 
-          <li class="todo">
-            <label for="id">
-              <input type="checkbox" id="id" />
-              <p>Test Todo</p>
-            </label>
-            <div>
-              <i class="fa-solid fa-ellipsis"></i>
-              <ul>
-                <li><i class="fa-solid fa-pen-to-square"></i>Edit</li>
-                <li><i class="fa-solid fa-trash"></i>Delete</li>
-              </ul>
-            </div>
-          </li> -->
-        </ul>
+        <ul class="todos"></ul>
       </div>
     </div>
   </body>
