TodoList add filters for pending and completed todos

--- a/15-TodoListApp/index.html
+++ b/15-TodoListApp/index.html
@@ -22,9 +22,9 @@
       </div>
       <nav>
         <div>
-          <button>All</button>
-          <button>Pending</button>
-          <button>Completed</button>
+          <button id="All">All</button>
+          <button id="Pending">Pending</button>
+          <button id="Completed">Completed</button>
         </div>
         <button>Clear All</button>
       </nav>
