GeometricApp create CSS shapes

--- a/16-GeometricArtApp/index.html
+++ b/16-GeometricArtApp/index.html
@@ -17,10 +17,14 @@
     <div class="main-container">
       <div class="tiles-wrapper">
         <div class="tile">
-          <div class="half"></div>
+          <div class="circle"></div>
         </div>
-        <div class="tile"></div>
-        <div class="tile"></div>
+        <div class="tile">
+          <div class="half-square"></div>
+        </div>
+        <div class="tile">
+          <div class="half-circle"></div>
+        </div>
         <div class="tile"></div>
         <div class="tile"></div>
         <div class="tile"></div>
