GeometricApp Create shapes and append to DOM

--- a/16-GeometricArtApp/index.html
+++ b/16-GeometricArtApp/index.html
@@ -15,22 +15,7 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="tiles-wrapper">
-        <div class="tile">
-          <div class="circle"></div>
-        </div>
-        <div class="tile">
-          <div class="half-square"></div>
-        </div>
-        <div class="tile">
-          <div class="half-circle"></div>
-        </div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-      </div>
+      <div class="tiles-wrapper"></div>
       <button>Generate</button>
     </div>
   </body>
