--- a/17-SnakeGameApp/index.html
+++ b/17-SnakeGameApp/index.html
@@ -24,14 +24,14 @@
     <div class="main-container">
       <div class="top-bar">
         <p>Score: 0</p>
-        <p>High Score: 100</p>
+        <p>High Score: 0</p>
       </div>
       <div class="tiles-wrapper"></div>
       <div class="bottom-bar">
-        <button><i class="fa-solid fa-arrow-left"></i></button>
-        <button><i class="fa-solid fa-arrow-up"></i></button>
-        <button><i class="fa-solid fa-arrow-right"></i></button>
-        <button><i class="fa-solid fa-arrow-down"></i></button>
+        <button id="ArrowLeft"><i class="fa-solid fa-arrow-left"></i></button>
+        <button id="ArrowUp"><i class="fa-solid fa-arrow-up"></i></button>
+        <button id="ArrowRight"><i class="fa-solid fa-arrow-right"></i></button>
+        <button id="ArrowDown"><i class="fa-solid fa-arrow-down"></i></button>
       </div>
     </div>
   </body>
