RichTextApp js rewrite and fixes

--- a/02-TextEditor/index.html
+++ b/02-TextEditor/index.html
@@ -11,15 +11,15 @@
   <body>
     <div class="main-container">
       <div class="toolbar">
-        <button id="bold" class="option-button btn-bold">
+        <button id="bold" class="option-button bold">
           <!-- bold -->
           <i class="fa-solid fa-bold"></i>
         </button>
-        <button id="superscript" class="option-button btn-sup">
+        <button id="superscript" class="option-button script">
           <!-- superscript -->
           <i class="fa-solid fa-superscript"></i>
         </button>
-        <button id="subscript" class="option-button btn-sub">
+        <button id="subscript" class="option-button script">
           <!-- subscript -->
           <i class="fa-solid fa-subscript"></i>
         </button>
@@ -47,31 +47,31 @@
           <!-- link-slash -->
           <i class="fa-solid fa-link-slash"></i>
         </button>
-        <button id="justifyLeft" class="option-button btn-align-left">
+        <button id="justifyLeft" class="option-button align">
           <!-- align-left -->
           <i class="fa-solid fa-align-left"></i>
         </button>
-        <button id="justifyCenter" class="option-button btn-align-center">
+        <button id="justifyCenter" class="option-button align">
           <!-- align-center -->
           <i class="fa-solid fa-align-center"></i>
         </button>
-        <button id="justifyRight" class="option-button btn-align-right">
+        <button id="justifyRight" class="option-button align">
           <!-- align-right -->
           <i class="fa-solid fa-align-right"></i>
         </button>
-        <button id="justifyFull" class="option-button btn-align-justify">
+        <button id="justifyFull" class="option-button align">
           <!-- align-justify -->
           <i class="fa-solid fa-align-justify"></i>
         </button>
-        <button id="indent" class="option-button ">
+        <button id="indent" class="option-button spacing">
           <!-- indent -->
           <i class="fa-solid fa-indent"></i>
         </button>
-        <button id="outdent" class="option-button ">
+        <button id="outdent" class="option-button spacing">
           <!-- outdent -->
           <i class="fa-solid fa-outdent"></i>
         </button>
-        <select name="headings" id="headings" class="adv-option-button">
+        <select name="formatBlock" id="formatBlock" class="adv-option-button">
           <option value="H1">H1</option>
           <option value="H2">H2</option>
           <option value="H3">H3</option>
@@ -79,7 +79,7 @@
           <option value="H5">H5</option>
           <option value="H6">H6</option>
         </select>
-        <select name="fonts" id="fonts" class="adv-option-button">
+        <select name="fontName" id="fontName" class="adv-option-button">
           <option value="Times New Roman">Times New Roman</option>
           <option value="Garamond">Garamond</option>
           <option value="Georgia">Georgia</option>
