--- a/18-BudgetApp/index.html
+++ b/18-BudgetApp/index.html
@@ -30,7 +30,7 @@
         </div>
         <div>
           <h2>Expenses</h2>
-          <input type="number" placeholder="Enter title of expense" />
+          <input type="text" placeholder="Enter title of expense" />
           <input type="number" placeholder="Enter value of expense" />
           <button>Add Amount</button>
         </div>
@@ -38,25 +38,20 @@
       <div class="mid-box">
         <div>
           <h3>Total Budget</h3>
-          <p>1000</p>
+          <h3>1000</h3>
         </div>
         <div>
           <h3>Expenses</h3>
-          <p>1000</p>
+          <h3>1000</h3>
         </div>
         <div>
           <h3>Balance</h3>
-          <p>1000</p>
+          <h3>1000</h3>
         </div>
       </div>
       <div class="bottom-box">
+        <h2>Expenses List</h2>
         <ul class="expenses">
-          <li>
-            <p>Buy Food</p>
-            <p>100</p>
-            <i class="fa-solid fa-pen-to-square"></i>
-            <i class="fa-solid fa-trash"></i>
-          </li>
           <li>
             <p>Buy Clothes</p>
             <p>200</p>
