BudgetApp Add edit expense styles

--- a/18-BudgetApp/index.html
+++ b/18-BudgetApp/index.html
@@ -52,18 +52,18 @@
       <div class="bottom-box">
         <h2>Expenses List</h2>
         <ul class="expenses">
-          <li>
+          <!-- <li>
             <p>Buy Clothes</p>
             <p>200</p>
             <i class="fa-solid fa-pen-to-square"></i>
             <i class="fa-solid fa-trash"></i>
           </li>
           <li>
-            <p>Pay Rent</p>
-            <p>500</p>
+            <p>Buy Clothes</p>
+            <p>200</p>
             <i class="fa-solid fa-pen-to-square"></i>
             <i class="fa-solid fa-trash"></i>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
