BudgetApp logic to update expenses

--- a/18-BudgetApp/index.html
+++ b/18-BudgetApp/index.html
@@ -38,33 +38,20 @@
       <div class="mid-box">
         <div>
           <h3>Total Budget</h3>
-          <h3>1000</h3>
+          <h3>0</h3>
         </div>
         <div>
           <h3>Expenses</h3>
-          <h3>1000</h3>
+          <h3>0</h3>
         </div>
         <div>
           <h3>Balance</h3>
-          <h3>1000</h3>
+          <h3>0</h3>
         </div>
       </div>
       <div class="bottom-box">
         <h2>Expenses List</h2>
-        <ul class="expenses">
-          <!-- <li>
-            <p>Buy Clothes</p>
-            <p>200</p>
-            <i class="fa-solid fa-pen-to-square"></i>
-            <i class="fa-solid fa-trash"></i>
-          </li>
-          <li>
-            <p>Buy Clothes</p>
-            <p>200</p>
-            <i class="fa-solid fa-pen-to-square"></i>
-            <i class="fa-solid fa-trash"></i>
-          </li> -->
-        </ul>
+        <ul class="expenses"></ul>
       </div>
     </div>
   </body>
